# 23----

./: .gitignore  23-视觉-杨彬.docx  README.md  task4
PycharmProjects/pythonProject/: main.py
task3/New Folder/: New Folder.rviz
task3/devel/: .catkin  local_setup.sh  setup.sh
task3/devel/lib/all/: ali
task3/devel/lib/markers/: basic_shapes
task3/devel/lib/pkgconfig/: all.pc  markers.pc  sv.pc  using_markers.pc
task3/devel/lib/sv/: sv  svt
task3/devel/lib/using_markers/: basic_shape
task3/devel/share/all/cmake/: allConfig.cmake
task3/devel/share/markers/cmake/: markersConfig.cmake
task3/devel/share/sv/cmake/: svConfig.cmake
task3/devel/share/using_markers/cmake/: using_markersConfig.cmake
task3/src/all/: CMakeLists.txt
task3/src/all/src/: all.cpp
